--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # Discord Bot Configuration
 # Copy this file to .env and fill in your actual bot token
 DISCORD_BOT_TOKEN=YOUR_BOT_TOKEN_HERE
+OMDB_API_KEY=YOUR_OMDB_API_KEY_HERE
